# hackathon-2

./: .gitignore  AGENTS.md  CLAUDE.md  Constitution.md  README.md  TESTING_GUIDE.md  docker-compose.yml  pyproject.toml  tasks.json
.github/workflows/: ci.yml
.specify/: config.yaml
.specify/memory/: constitution.md
backend/: .env.example  .env.production.example  CLAUDE.md  Dockerfile  README.md  alembic.ini  init_db.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_sessions_table.py
backend/docs/: backup-restore.md  database-performance.md
backend/scripts/: backup-database.sh  restore-database.sh
backend/src/: config.py  main.py
backend/src/api/: health.py  schemas.py
backend/src/api/v1/: __init__.py  auth.py  chat.py  tasks.py
backend/src/db/: database.py  models.py
backend/src/middleware/: auth.py  logging_middleware.py
backend/src/monitoring/: __init__.py  error_tracking.py
backend/src/services/: auth_service.py  chat_service.py  db_service.py  task_service.py
backend/tests/: conftest.py
backend/tests/contract/: conftest.py  test_auth_contracts.py  test_tasks_contracts.py
backend/tests/integration/: conftest.py  test_auth_flow.py  test_concurrent_ops.py  test_load_performance.py  test_network_failures.py  test_rapid_creation.py  test_session_expiration.py  test_task_complete.py  test_task_create.py  test_task_delete.py  test_task_list.py  test_task_update.py
backend/tests/unit/: test_auth_service.py  test_task_service.py
docs/: deployment-guide.md
frontend/: .env.example  .eslintrc.json  CLAUDE.md  Dockerfile  README.md  eslint.config.mjs  jest.config.js  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
frontend/tests/: setup.ts
phase1-console/: CLAUDE.md  README.md  pyproject.toml
specs/: architecture.md  overview.md
specs/001-todo-mvp-cli/: plan.md  spec.md  tasks.md
specs/002-phase2-webapp/: analysis.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  tasks.md.backup
specs/003-ui-enhancement/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/api/: rest-endpoints.md
specs/database/: schema.md
specs/features/: 001-todo-mvp-cli.md  002-task-crud-api.md  (+1 more)
(+64 files in other folders)
